recursion.lessons.recursion.tree.Tree.scala.error
Tree:27: error: not found: value etape
		tree(etape, longueur, angle, shrink);
                     ^